--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,6 +64,22 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.line-clamp.line-2 {
+    --line-clamp: 2;
+}
+
+.break_all {
+    word-break: break-all;
+}
+
 /* Header */
 
 .header {
@@ -353,6 +369,7 @@ a {
 }
 
 .popular .course-item .title a {
+    padding-right: 6px;
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 1.67;
